# med2limit

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_shell_basic.py  README.md
examples/01_exemple/: 01_Shell2.med  01_exemple.comm  01_exemple.linp  01_exemple.lui  01_exemple.mail  01_exemple.mess  01_exemple.rmed
examples/02_exemple/: 02_exemple.comm  02_exemple.export  02_exemple.linp  02_exemple.lui  02_exemple.mail  02_exemple.med  02_exemple.mess  02_exemple.rmed  cube_plate.med
examples/data/: 01_Shell1.med  01_carcoc.rmed  01_exemple.comm  01_exemple.export  01_exemple.linp  01_exemple.lui  01_exemple.med  01_exemple.resu
med2limit/: __init__.py  cli.py  converter.py  element_types.py  fields.py  mesh.py  orientation.py  reader.py  result_mapper.py
src/: __init__.py  cli.py  filter.py  writer.py
tests/: test_element_types.py
