[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med2limit"
version = "0.0.1"
description = "Convert Code_Aster MED/RMED simulation files to LIMIT .linp / .lui input format"
readme = "README.md"
requires-python = ">=3.9,<=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dorian Nezzar", email= "dorian.nezzar@simvia.tech" },
]
keywords = ["med", "rmed", "code_aster", "limit", "fea", "fatigue"]

dependencies = [
    "medcoupling>=9.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
med2limit = "med2limit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["med2limit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]